--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   	"scripts": {
   	  	"dev": "vite",
   	  	"build": "vite build",
-  	  	"preview": "vite preview"
-		"predeploy": "npm run build"
+  	  	"preview": "vite preview",
+		"predeploy": "npm run build",
 		"deploy": "gh-pages -d dist"
   	},
   	"dependencies": {
